//tracker.nci.nih.gov/browse/OCEPROJECT-4481 - help details text update

--- a/PERT/help/nciplhelp.html
+++ b/PERT/help/nciplhelp.html
@@ -58,11 +58,11 @@ families, health care providers, and the public.</p>
     </tr>
     <tr>
       <td> </td>
-      <td>P.O. Box 24128</td>
+      <td>PO Box 100</td>
     </tr>
     <tr>
       <td> </td>
-      <td>Baltimore, MD 21227</td>
+      <td>Pueblo, CO 81002</td>
     </tr>
   </tbody>
 </table>
