--- a/NCIPLADMIN/Help/troubleshooting.htm
+++ b/NCIPLADMIN/Help/troubleshooting.htm
@@ -81,12 +81,12 @@ else { parent.lazysync('troubleshooting.htm'); }
 
 <div style="margin: 5px 5px 12px 10px;">
 <p class="p_Heading2"><span class="f_Heading2">Problems using the Admin Tool</span></p>
-<p>E-mail <a href="mailto:cishelp@aspensys.com" class="weblink">cishelp@aspensys.com</a> and a member of CISCS User Services will help you.</p>
+<p>E-mail <a href="mailto:NCI@gpo.gov" class="weblink">NCI@gpo.gov</a> and a member of CISCS User Services will help you.</p>
 <p><span style="font-weight: bold;">If possible, in your message: </span></p>
 <p>Describe what you were trying to do when the problem occurred.</p>
 <p>Attach a screen shot of the problem or error message.</p>
 <p class="p_Heading2"><span class="f_Heading2">Suggestions for improving the Admin Tool</span></p>
-<p>Send your enhancement request to <a href="mailto:cishelp@aspensys.com" class="weblink">cishelp@aspensys.com</a> and CISCS User Services staff will log and review it.</p>
+<p>Send your enhancement request to <a href="mailto:NCI@gpo.gov" class="weblink">cishelp@aspensys.com</a> and CISCS User Services staff will log and review it.</p>
 
 </div>
 
