//tracker.nci.nih.gov/browse/OCEPROJECT-4512 - restyled and added image to maintenance.html

--- a/NCIPL/maintenance.html
+++ b/NCIPL/maintenance.html
@@ -62,9 +62,12 @@
                 <div id="contentdiv">
                     <div id="maincontent">
                         <div id="home">
-                            <a id="skiptocontent" tabindex="-1"></a>
-                            <p class="maintenancehead">Temporarily down for maintenance</p>
-                            <p class="maintenancetext">NCI Publications Locator is undergoing scheduled maintenance. Normal service will be restored soon.</p>
+                            <div class="maintenancecontent">
+                                <a id="skiptocontent" tabindex="-1"></a>
+                                <img src="images/maintenance.png" />
+                                <p class="maintenancehead">Temporarily down for maintenance</p>
+                                <p class="maintenancetext">NCI Publications Locator is undergoing scheduled maintenance. Normal service will be restored soon.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
