--- a/NCIPL/maintenance.html
+++ b/NCIPL/maintenance.html
@@ -14,6 +14,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8,9,10">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar--parent.css" />
+        <script type="text/javascript" src="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar.js" async></script>
         <title>
             Order free National Cancer Institute publications - NCI Publications Locator
         </title>
