--- a/NCIPLex/GenericErrorPage.htm
+++ b/NCIPLex/GenericErrorPage.htm
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html>
 <head>
+    <link rel="stylesheet" href="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar--parent.css" />
+    <script type="text/javascript" src="//static.cancer.gov/returnToNCI-bar/returnToNCI-bar.js" async=async async=async></script>
     <title>Website problem</title>
     <style>
         body
@@ -11,6 +13,7 @@
             font-size: .7em;
             color: black;
             background-color: white;
+            padding-left: 8px;
         }
         b
         {
