[OCPLPUBLOC-99] added DTM tags to NCIPL

--- a/NCIPL/maintenance.html
+++ b/NCIPL/maintenance.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html class="no-js" lang="en">
     <head id="ctl00_Head1">
+        <script src="//assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-e63d05a8f53e643e9e80f6ace129c3cf2b49d7bc.js"></script>        
         <meta class="foundation-mq-small">
         <meta class="foundation-mq-small-only">
         <meta class="foundation-mq-medium">
@@ -130,11 +131,8 @@
         <!--End Outer Div-->
         <!-- Begin Adobe Analytics -->
         <script src="https://static.cancer.gov/webanalytics/wa_pubs_pageload.js"></script>
-        <script type="text/javascript" src="https://static.cancer.gov/webanalytics/WA_PUBS_pre.js"></script>
-        <script type="text/javascript" src="https://static.cancer.gov/webanalytics/s_code.js"></script>
-        <script type="text/javascript" src="https://static.cancer.gov/webanalytics/WA_PUBS_post.js"></script>
         <script language="javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=HHS&amp;subagency=NCI"></script>
         <!-- End Adobe Analytics -->
-
+        <script type="text/javascript">_satellite.pageBottom();</script>
     </body>
 </html>
